@@ -5,10 +5,10 @@ public class AObject2 {
 	public static void main(String[] s) {
 		final Object[] os = new Object[5];
 		os[0] = new Object();
-		os[1] = new Integer(10);
-		os[2] = new Integer(20);
+		os[1] = Integer.valueOf(10);
+		os[2] = Integer.valueOf(20);
 		os[3] = new int[] { 10, 20, 30 };
-		os[4] = new Integer(30);
+		os[4] = Integer.valueOf(30);
 		printAllAndSum(os);
 	}
 
